Add new button style

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html>
   <title>CSS Playground</title>
   <link rel="stylesheet" type="text/css" href="index.css">
@@ -7,4 +7,5 @@
   <button class="buttonA">.buttonA</button>
   <button class="buttonB">.buttonB</button>
   <button class="buttonC">.buttonC</button>
+  <button class="buttonD">.buttonD</button>
 </body>
