Another button effect. Add links file

--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
   <button class="buttonB">.buttonB</button>
   <button class="buttonC">.buttonC</button>
   <button class="buttonD">.buttonD</button>
+  <button class="buttonE">.buttonE</button>
 </body>
