Another link style

--- a/links.html
+++ b/links.html
@@ -25,4 +25,11 @@
     <a href="#" class="linkC">.linkC</a>
     <a href="#" class="linkC">.linkC</a>
   </div>
+  <div>
+    <a href="#" class="linkD">.linkD</a>
+    <a href="#" class="linkD">.linkD</a>
+    <a href="#" class="linkD">.linkD</a>
+    <a href="#" class="linkD">.linkD</a>
+    <a href="#" class="linkD">.linkD</a>
+  </div>
 </body>
