Styling links page.

--- a/links.html
+++ b/links.html
@@ -4,32 +4,35 @@
   <link rel="stylesheet" type="text/css" href="links.css">
 </html>
 <body>
-  <div>
-    <a href="#" class="linkA">.linkA</a>
-    <a href="#" class="linkA">.linkA</a>
-    <a href="#" class="linkA">.linkA</a>
-    <a href="#" class="linkA">.linkA</a>
-    <a href="#" class="linkA">.linkA</a>
-  </div>
-  <div>
-    <a href="#" class="linkB">.linkB</a>
-    <a href="#" class="linkB">.linkB</a>
-    <a href="#" class="linkB">.linkB</a>
-    <a href="#" class="linkB">.linkB</a>
-    <a href="#" class="linkB">.linkB</a>
-  </div>
-  <div>
-    <a href="#" class="linkC">.linkC</a>
-    <a href="#" class="linkC">.linkC</a>
-    <a href="#" class="linkC">.linkC</a>
-    <a href="#" class="linkC">.linkC</a>
-    <a href="#" class="linkC">.linkC</a>
-  </div>
-  <div>
-    <a href="#" class="linkD">.linkD</a>
-    <a href="#" class="linkD">.linkD</a>
-    <a href="#" class="linkD">.linkD</a>
-    <a href="#" class="linkD">.linkD</a>
-    <a href="#" class="linkD">.linkD</a>
-  </div>
+  <header>
+    <h1>Link Styles</h1>
+  </header>
+  <section id="section1">
+    <a href="#section1" class="linkA">.linkA</a>
+    <a href="#section1" class="linkA">.linkA</a>
+    <a href="#section1" class="linkA">.linkA</a>
+    <a href="#section1" class="linkA">.linkA</a>
+    <a href="#section1" class="linkA">.linkA</a>
+  </section>
+  <section id="section2">
+    <a href="#section2" class="linkB">.linkB</a>
+    <a href="#section2" class="linkB">.linkB</a>
+    <a href="#section2" class="linkB">.linkB</a>
+    <a href="#section2" class="linkB">.linkB</a>
+    <a href="#section2" class="linkB">.linkB</a>
+  </section>
+  <section id="section3">
+    <a href="#section3" class="linkC">.linkC</a>
+    <a href="#section3" class="linkC">.linkC</a>
+    <a href="#section3" class="linkC">.linkC</a>
+    <a href="#section3" class="linkC">.linkC</a>
+    <a href="#section3" class="linkC">.linkC</a>
+  </section>
+  <section id="section4">
+    <a href="#section4" class="linkD">.linkD</a>
+    <a href="#section4" class="linkD">.linkD</a>
+    <a href="#section4" class="linkD">.linkD</a>
+    <a href="#section4" class="linkD">.linkD</a>
+    <a href="#section4" class="linkD">.linkD</a>
+  </section>
 </body>
