--- a/buttons.html
+++ b/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>CSS Playground</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="buttons.css">
 </html>
 <body>
   <button class="buttonA">.buttonA</button>
