Header on buttons page

--- a/buttons.html
+++ b/buttons.html
@@ -4,6 +4,9 @@
   <link rel="stylesheet" type="text/css" href="buttons.css">
 </html>
 <body>
+  <header>
+    <h1>Button Styles</h1>
+  </header>
   <button class="buttonA">.buttonA</button>
   <button class="buttonB">.buttonB</button>
   <button class="buttonC">.buttonC</button>
