Update svg angles. Create files for full page menus

--- a/svg_angles.html
+++ b/svg_angles.html
@@ -16,7 +16,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod sed ligula sed gravida. Phasellus egestas tincidunt accumsan. Fusce ut iaculis nisl. Morbi felis ex, aliquam eget mi in, ornare placerat tortor. Proin massa dolor, pulvinar sit amet auctor in, feugiat sit amet ipsum. Proin vitae orci volutpat, feugiat leo quis, ultrices diam. Nunc leo enim, varius in sem sit amet, elementum ultricies massa. Etiam posuere diam dolor. Fusce auctor vehicula turpis a rhoncus. Duis neque urna, facilisis at sem nec, euismod maximus risus. Quisque porttitor sit amet nulla ac tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum a nisl mi. Mauris lacinia enim non iaculis ultricies.</p>
     <div class="angle-container">
       <svg height="100%" width="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-        <polygon fill="#1B5E20" stroke="none" points="0,0 0,100 100,100 100,0 90,100 80,0 70,100 60,0 50,100 40,0 30,100 20,0 10,100"></polygon>
+        <polygon fill="#1B5E20" stroke="none" points="0,100 100,100 100,0"></polygon>
       </svg>
     </div>
   </section>
@@ -24,7 +24,7 @@
     <p>Phasellus commodo at lectus sit amet vehicula. Sed ultricies sapien sit amet sem feugiat feugiat. Phasellus rhoncus quam vitae egestas malesuada. Aenean imperdiet enim aliquam rutrum vehicula. Sed maximus nisl sem. Pellentesque convallis molestie elit, quis sodales lacus tincidunt sit amet. Curabitur in est a lacus dignissim eleifend id commodo metus.</p>
     <div class="angle-container">
       <svg height="100%" width="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-        <polygon fill="#006064" stroke="none" points="0,0 0,100 100,100 100,0 90,100 80,0 70,100 60,0 50,100 40,0 30,100 20,0 10,100"></polygon>
+        <polygon fill="#006064" stroke="none" points="0,0 0,100 100,100"></polygon>
       </svg>
     </div>
   </section>
@@ -32,7 +32,7 @@
     <p>Duis pellentesque nunc et nibh auctor ornare. Cras pretium velit ut viverra rutrum. Duis sed hendrerit erat, sed convallis mi. Nulla id ex quis nunc aliquet volutpat. Phasellus in sodales ligula. Duis eleifend vehicula dui vel convallis. Sed egestas purus vel vestibulum vehicula. Nullam euismod quam facilisis facilisis bibendum. Sed aliquam ornare mi vel fringilla. Nullam faucibus elementum justo, vel lacinia sapien imperdiet et.</p>
     <div class="angle-container">
       <svg height="100%" width="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-        <polygon fill="#4A148C" stroke="none" points="0,0 0,100 100,100 100,0 90,100 80,0 70,100 60,0 50,100 40,0 30,100 20,0 10,100"></polygon>
+        <polygon fill="#4A148C" stroke="none" points="0,0 0,100 100,100 100,0 66,0 50,100 33,0"></polygon>
       </svg>
     </div>
   </section>
@@ -40,7 +40,7 @@
     <p>Quisque quis pellentesque risus. Curabitur condimentum ac quam eu vestibulum. Nulla lobortis ut sem sed convallis. Cras sed dui risus. Fusce lacinia eu metus eget malesuada. Pellentesque rutrum malesuada ligula nec sodales. Quisque ac turpis vitae metus tincidunt maximus quis lacinia arcu. Nullam quis eros at mi consequat porta vel eget mauris.</p>
     <div class="angle-container">
       <svg height="100%" width="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-        <polygon fill="#3E2723" stroke="none" points="0,0 0,100 100,100 100,0 90,100 80,0 70,100 60,0 50,100 40,0 30,100 20,0 10,100"></polygon>
+        <polygon fill="#3E2723" stroke="none" points="0,0 0,100 100,100 100,0 30,100"></polygon>
       </svg>
     </div>
   </section>
