--- a/full_menu.html
+++ b/full_menu.html
@@ -12,8 +12,21 @@
       <span></span>
       <span></span>
     </div>
+    <div id="menu-icon2" class="menu-icon" data-menu="menu2">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
   <div id="menu1" class="menu">
+    <ul>
+      <li><a href="#">Item #1</a></li>
+      <li><a href="#">Item #2</a></li>
+      <li><a href="#">Item #3</a></li>
+      <li><a href="#">Item #4</a></li>
+    </ul>
+  </div>
+  <div id="menu2" class="menu">
     <ul>
       <li><a href="#">Item #1</a></li>
       <li><a href="#">Item #2</a></li>
