--- a/background_video.html
+++ b/background_video.html
@@ -12,14 +12,14 @@
   </header>
   <div class="video-section">
     <h1 class="heading">Full Page Video Background</h1>
-    <button id="scroll" class="scroll">&#8675;</button>
+    <button id="scroll" class="scroll" title="Scroll down">&#8675;</button>
     <div class="video-wrapper">
       <div id='ytplayer'></div>
     </div>
   </div>
   <div id="main" class="main">
     <h1>Full Page Video Background</h1>
-    <p>This page demonstrates a full screen video as a background. The video here is a YouTube video displayed in an iframe. Using a YouTube Iframe embed is really not the best way to do this. Its much easier if you just use the actual video source with an HTML5 &lt;video&gt; tag instead of dealing with iframes and YouTube's API, which makes correctly sizing the video impossible.</p>
+    <p>This page demonstrates a full screen video as a background. The video here is a YouTube video displayed in an iframe. Using a YouTube Iframe embed is really not the best way to do this. Its much easier if you just use the actual video source with an HTML5 &lt;video&gt; tag instead of dealing with iframes and YouTube's API, which makes correctly sizing the video difficult.</p>
   </div>
 
   <script>
